--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loops",
   "version": "0.1.0",
-  "author": "Dan Rowden <hello@danrowden.com>",
+  "author": "Dan Rowden <dan@loops.so>",
   "license": "MIT",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
@@ -13,6 +13,13 @@
     "./dist/*",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Loops-so/loops-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Loops-so/loops-js/issues"
+  },
   "type": "module",
   "devDependencies": {
     "tsup": "^7.2.0",
