--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "module": "./dist/index.esm.js",
   "exports": {
     ".": {
+      "types": {
+        "import": "./dist/index.d.ts",
+        "require": "./dist/index.d.cts"
+      },
       "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.cts"
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
