--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-node_modules/
-dist
-.env
+.venv/
+__pycache__/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+*.pyc
 .DS_Store
+.env
+dist/
+build/
+*.egg-info/
